syntax = "proto3";

package rivet.backend.pkg.party.get;

import "proto/common.proto";
import "proto/backend/party.proto";

message Request {
	repeated rivet.common.Uuid party_ids = 1;
}

message Response {
	repeated rivet.backend.party.Party parties = 1;
}
